src/test/deca/syntax/invalid/provided/class37.java
class A{
    int somme(int a, int b ){
        int mult(int t,int r){
            return t*r;
        }
        return a+b;
    }
}